@@ -1,3 +1,9 @@
+xp-maven-plugin (3.2.2)
+
+  * Handle Windows-only and Un*x-only PHP extensions
+
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Mon, 3 Dec 2012
+
 xp-maven-plugin (3.2.1)
 
   * Fix broken xar lifecycle mappings (lifecycle.xml and components.xml)
